--- a/testerccdashboard/NAMESPACE
+++ b/testerccdashboard/NAMESPACE
@@ -1,3 +1,12 @@
 export(initDat)
 export(str_lengthTest)
 export(sumTechReps)
+export(est_r_m)
+export(dynRangePlot)
+export(geneExprTest)
+export(estLODR)
+export(maConcPlot)
+export(saveResults)
+export(dynRangePlotLODR)
+export(printLODRres)
+export(erccROC)
