--- a/testerccdashboard/NAMESPACE
+++ b/testerccdashboard/NAMESPACE
@@ -7,6 +7,8 @@ export(geneExprTest)
 export(estLODR)
 export(maConcPlot)
 export(saveResults)
+export(savePlots)
 export(dynRangePlotLODR)
 export(printLODRres)
 export(erccROC)
+export(annotLODR)
